feat: update docker setup to have smaller container sizes

--- a/packages/hoppscotch-backend/package.json
+++ b/packages/hoppscotch-backend/package.json
@@ -5,6 +5,11 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "files": [
+    "dist",
+    "prisma",
+    "prod_run.mjs"
+  ],
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
