feat(backend): add desktop auth deeplink callback

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ SESSION_SECRET='add some secret here'
 REDIRECT_URL="http://localhost:3000"
 WHITELISTED_ORIGINS = "http://localhost:3170,http://localhost:3000,http://localhost:3100"
 VITE_ALLOWED_AUTH_PROVIDERS = GOOGLE,GITHUB,MICROSOFT,EMAIL
+DESKTOP_DEEP_LINK_URL=hoppscotch://auth
 
 # Google Auth Config
 GOOGLE_CLIENT_ID="************************************************"
