--- a/packages/hoppscotch-selfhost-desktop/package.json
+++ b/packages/hoppscotch-selfhost-desktop/package.json
@@ -17,9 +17,11 @@
     "@platform/auth": "^0.1.106",
     "@tauri-apps/api": "^1.3.0",
     "@tauri-apps/cli": "^1.3.0",
+    "@urql/core": "^4.1.1",
     "@vueuse/core": "^10.4.1",
     "axios": "^0.21.4",
     "buffer": "^6.0.3",
+    "cookie": "^0.5.0",
     "dioc": "workspace:^",
     "environments.api": "link:@platform/environments/environments.api",
     "event": "link:@tauri-apps/api/event",
@@ -29,10 +31,13 @@
     "rxjs": "^7.8.1",
     "shell": "link:@tauri-apps/api/shell",
     "stream-browserify": "^3.0.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "tauri": "link:@tauri-apps/api/tauri",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
+    "tauri-plugin-websocket-api": "github:tauri-apps/tauri-plugin-websocket#v1",
     "util": "^0.12.4",
     "vue": "^3.2.45",
+    "wonka": "^6.3.4",
     "workbox-window": "^6.5.4"
   },
   "devDependencies": {
@@ -46,6 +51,7 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/cookie": "^0.5.1",
     "@types/lodash-es": "^4.17.9",
     "@types/node": "^18.7.10",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
