--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -146,6 +146,7 @@
     "npm-run-all": "^4.1.5",
     "openapi-types": "^12.1.3",
     "postcss": "^8.4.23",
+    "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "sass": "^1.69.5",
