--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -42,13 +42,13 @@
     "@hoppscotch/ui": "workspace:^",
     "@hoppscotch/vue-toasted": "^0.1.0",
     "@lezer/highlight": "1.2.0",
+    "@unhead/vue": "^1.8.7",
     "@urql/core": "^4.2.0",
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-auth": "^2.1.6",
     "@urql/exchange-graphcache": "^6.3.3",
     "@vitejs/plugin-legacy": "^4.1.1",
     "@vueuse/core": "^10.6.1",
-    "@vueuse/head": "^1.3.1",
     "acorn-walk": "^8.3.0",
     "axios": "^1.6.2",
     "buffer": "^6.0.3",
