chore: define path alias mappers in vite config

--- a/packages/hoppscotch-js-sandbox/tsconfig.json
+++ b/packages/hoppscotch-js-sandbox/tsconfig.json
@@ -8,8 +8,7 @@
     "esModuleInterop": true,
     "strict": true,
     "paths": {
-      "~/*": ["./src/*"],
-      "@/*": ["./src/*"]
+      "~/*": ["./src/*"]
     },
     "types": ["@types/node", "@types/jest", "@relmify/jest-fp-ts"],
     "outDir": "./dist/",
