--- a/packages/hoppscotch-js-sandbox/package.json
+++ b/packages/hoppscotch-js-sandbox/package.json
@@ -31,7 +31,7 @@
     "lint": "eslint --ext .ts,.js --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .ts,.js --ignore-path .gitignore .",
     "test": "pnpm exec jest",
-    "build": "vite build",
+    "build": "vite build && tsc --emitDeclarationOnly",
     "clean": "pnpm tsc --build --clean",
     "postinstall": "pnpm run build",
     "prepublish": "pnpm run build",
@@ -73,7 +73,6 @@
     "prettier": "^2.8.4",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3",
-    "vite": "^5.0.4",
-    "vite-plugin-dts": "3.6.4"
+    "vite": "^5.0.4"
   }
 }
