--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
-    "@hoppscotch/ui": "^0.1.0",
+    "@hoppscotch/ui": "file:../ui",
     "@types/node": "17.0.27",
     "cross-env": "^7.0.3",
     "http-server": "^14.1.1",
