--- a/packages/hoppscotch-selfhost-web/package.json
+++ b/packages/hoppscotch-selfhost-web/package.json
@@ -28,7 +28,7 @@
     "@fontsource-variable/roboto-mono": "^5.0.16",
     "@hoppscotch/common": "workspace:^",
     "@hoppscotch/data": "workspace:^",
-    "@hoppscotch/ui": "^0.1.0",
+    "@hoppscotch/ui": "file:../../../ui",
     "@import-meta-env/unplugin": "^0.4.10",
     "axios": "^1.6.2",
     "buffer": "^6.0.3",
