refactor: persist request handle under tab saveContext
Bump vue version.

--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -90,7 +90,7 @@
     "util": "^0.12.5",
     "uuid": "^9.0.1",
     "verzod": "^0.2.0",
-    "vue": "^3.3.8",
+    "vue": "3.4.18",
     "vue-i18n": "^9.7.1",
     "vue-pdf-embed": "^1.2.1",
     "vue-router": "^4.2.5",
