--- a/packages/hoppscotch-selfhost-web/package.json
+++ b/packages/hoppscotch-selfhost-web/package.json
@@ -37,7 +37,7 @@
     "rxjs": "^7.8.1",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
-    "vue": "^3.3.8",
+    "vue": "3.4.18",
     "workbox-window": "^7.0.0",
     "zod": "^3.22.4"
   },
