--- a/packages/hoppscotch-backend/package.json
+++ b/packages/hoppscotch-backend/package.json
@@ -34,6 +34,7 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.6",
+    "@nestjs/schedule": "^4.0.1",
     "@nestjs/throttler": "^5.0.0",
     "@prisma/client": "^5.8.0",
     "argon2": "^0.30.3",
@@ -57,6 +58,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-microsoft": "^1.0.0",
+    "posthog-node": "^3.6.2",
     "prisma": "^5.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
