chorE: installed types for cron library

--- a/packages/hoppscotch-backend/package.json
+++ b/packages/hoppscotch-backend/package.json
@@ -74,6 +74,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cron": "^2.4.0",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.4.0",
     "@types/luxon": "^3.2.0",
