--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -1,12 +1,16 @@
-# Docker Compose config used for internal test and QA deployments
-# This just spins up the AIO container along with an attached DB to the standard HTTP ports with subpath access mode
-
-# TODO: Add Healthcheck for the AIO container
-
 version: "3.7"
 
 services:
-  # The service that spins up all 3 services at once in one container
+  hoppscotch-db:
+    image: postgres:15
+    ports:
+      - "5432:5432"
+    user: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: testpass
+      POSTGRES_DB: hoppscotch
+
   hoppscotch-aio:
     container_name: hoppscotch-aio
     restart: unless-stopped
@@ -22,30 +26,6 @@ services:
     ports:
       - "3080:80"
     depends_on:
-      hoppscotch-db:
-        condition: service_healthy
+      - hoppscotch-db
     command: ["sh", "-c", "pnpm exec prisma migrate deploy && node /usr/src/app/aio_run.mjs"]
 
-  # The preset DB service, you can delete/comment the below lines if
-  # you are using an external postgres instance
-  # This will be exposed at port 5432
-  hoppscotch-db:
-    image: postgres:15
-    ports:
-      - "5432:5432"
-    user: postgres
-    environment:
-      # The default user defined by the docker image
-      POSTGRES_USER: postgres
-      # NOTE: Please UPDATE THIS PASSWORD!
-      POSTGRES_PASSWORD: testpass
-      POSTGRES_DB: hoppscotch
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "sh -c 'pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}'"
-        ]
-      interval: 5s
-      timeout: 5s
-      retries: 10
