chore: make `isolated-vm` a peer-dependency

--- a/packages/hoppscotch-js-sandbox/package.json
+++ b/packages/hoppscotch-js-sandbox/package.json
@@ -54,7 +54,6 @@
     "@hoppscotch/data": "workspace:^",
     "@types/lodash-es": "4.17.12",
     "fp-ts": "2.12.1",
-    "isolated-vm": "4.7.2",
     "lodash": "4.17.21",
     "lodash-es": "4.17.21"
   },
@@ -75,5 +74,13 @@
     "typescript": "4.9.5",
     "vite": "5.0.5",
     "vitest": "0.34.6"
+  },
+  "peerDependencies": {
+    "isolated-vm": "4.7.2"
+  },
+  "peerDependenciesMeta": {
+    "isolated-vm": {
+      "optional": true
+    }
   }
 }
