feat: mock api in backend

--- a/packages/hoppscotch-backend/package.json
+++ b/packages/hoppscotch-backend/package.json
@@ -38,6 +38,9 @@
     "@nestjs/terminus": "10.2.3",
     "@nestjs/throttler": "5.0.1",
     "@prisma/client": "5.8.1",
+    "@stoplight/prism-core": "5.8.0",
+    "@stoplight/prism-http": "5.8.1",
+    "@stoplight/types": "14.1.1",
     "argon2": "0.30.3",
     "bcrypt": "5.1.0",
     "cookie": "0.5.0",
