--- a/packages/hoppscotch-selfhost-desktop/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-selfhost-desktop/src-tauri/Cargo.toml
@@ -31,6 +31,9 @@ serde_json = "1.0.108"
 url = "2.5.0"
 hex_color = "3.0.0"
 serde = { version = "1.0.203", features = ["derive"] }
+dashmap = "5.5.3"
+tokio = { version = "1.38.0", features = ["macros"] }
+tokio-util = "0.7.11"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.25.0"
