--- a/packages/hoppscotch-selfhost-desktop/package.json
+++ b/packages/hoppscotch-selfhost-desktop/package.json
@@ -37,7 +37,8 @@
     "tauri-plugin-store-api": "0.0.0",
     "util": "0.12.5",
     "vue": "3.3.9",
-    "workbox-window": "6.6.0"
+    "workbox-window": "6.6.0",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@graphql-codegen/add": "5.0.0",
