--- a/packages/hoppscotch-selfhost-desktop/package.json
+++ b/packages/hoppscotch-selfhost-desktop/package.json
@@ -36,6 +36,7 @@
     "tauri": "link:@tauri-apps/api/tauri",
     "tauri-plugin-store-api": "0.0.0",
     "util": "0.12.5",
+    "verzod": "0.2.2",
     "vue": "3.3.9",
     "workbox-window": "6.6.0",
     "zod": "3.22.4"
