--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ REFRESH_TOKEN_VALIDITY="604800000" # Default validity is 7 days (604800000 ms) i
 ACCESS_TOKEN_VALIDITY="86400000" # Default validity is 1 day (86400000 ms) in ms
 SESSION_SECRET='add some secret here'
 # Reccomended to be true, set to false if you are using http
+# Note: Some auth providers may not support http requests
 ALLOW_SECURE_COOKIES=true
 
 # Hoppscotch App Domain Config
