--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -46,6 +46,7 @@
     "@urql/exchange-auth": "2.1.6",
     "@urql/exchange-graphcache": "6.4.0",
     "@vitejs/plugin-legacy": "4.1.1",
+    "@vue-flow/background": "1.3.0",
     "@vue-flow/core": "1.39.0",
     "@vueuse/core": "10.7.0",
     "acorn-walk": "8.3.0",
