--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -48,6 +48,7 @@
     "@vitejs/plugin-legacy": "4.1.1",
     "@vue-flow/background": "1.3.0",
     "@vue-flow/core": "1.39.0",
+    "@vue-flow/node-resizer": "1.4.0",
     "@vueuse/core": "10.7.0",
     "acorn-walk": "8.3.0",
     "axios": "1.6.2",
