--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -47,6 +47,7 @@
     "@urql/exchange-graphcache": "6.4.0",
     "@vitejs/plugin-legacy": "4.1.1",
     "@vue-flow/background": "1.3.0",
+    "@vue-flow/controls": "1.1.2",
     "@vue-flow/core": "1.39.0",
     "@vue-flow/node-resizer": "1.4.0",
     "@vueuse/core": "10.7.0",
