feat: initializing hoppscotch-shc-admin

--- a/packages/hoppscotch-sh-admin/package.json
+++ b/packages/hoppscotch-sh-admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hoppscotch-sh-admin",
+  "name": "@hoppscotch/sh-admin",
   "private": true,
   "version": "2024.7.2",
   "type": "module",
