--- a/packages/hoppscotch-shc-admin/package.json
+++ b/packages/hoppscotch-shc-admin/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.4.31",
     "@hoppscotch/sh-admin": "workspace:^",
     "@hoppscotch/common": "workspace:^",
+    "@hoppscotch/ui": "0.1.3",
     "vue-router": "4.1.0"
   },
   "devDependencies": {
