feat|wip: generate otp with tauri command

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,3 +25,4 @@ reqwest = { version = "0.12.7", features = ["native-tls", "multipart"] }
 warp = "0.3.7"
 tokio-util = "0.7.12"
 uuid = { version = "1.10.0", features = [ "v4", "fast-rng" ] }
+chrono = "0.4.38"
