--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,7 +21,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.40.0", features = ["full"] }
 dashmap = "6.1.0"
-reqwest = { version = "0.12.7", features = ["native-tls", "multipart"] }
 warp = "0.3.7"
 tokio-util = "0.7.12"
 uuid = { version = "1.10.0", features = [ "v4", "fast-rng" ] }
@@ -29,6 +28,10 @@ chrono = { version = "0.4", features = ["serde"] }
 rand = "0.8.5"
 log = "0.4.22"
 env_logger = "0.11.5"
+curl = { version = "0.4.46", features = ["ntlm", "static-curl", "static-ssl"] }
+openssl = "0.10.66"
+openssl-sys = "0.9.103"
+url-escape = "0.1.1"
 
 [dev-dependencies]
 mockito = "1.5.0"
