--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@hoppscotch/ui": "^0.2.1",
     "@tauri-apps/api": ">=2.0.0-rc.0",
     "@tauri-apps/plugin-shell": ">=2.0.0-rc.0",
+    "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "fp-ts": "^2.16.9",
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.6",
     "@tauri-apps/cli": ">=2.0.0-rc.0",
     "@types/node": "^22.7.0",
     "@vitejs/plugin-vue": "^5.1.4",
@@ -24,6 +27,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.2.2",
+    "unplugin-icons": "^0.19.3",
     "vite": "^5.4.7",
     "vue-tsc": "^2.0.22"
   }
