docs: add `description` and `authors`

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "hoppscotch-interceptor"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "A cross-platform HTTP request interceptor for Hoppscotch for advanced request handling including custom headers, certificates, proxies, and local system integration."
+authors = ["CuriousCorrelation", "AndrewBastin"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
