--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,6 +34,7 @@ curl = { version = "0.4.46", features = ["ntlm", "static-curl", "static-ssl"] }
 openssl = "0.10.66"
 openssl-sys = "0.9.103"
 url-escape = "0.1.1"
+thiserror = "1.0.64"
 
 [dev-dependencies]
 mockito = "1.5.0"
