--- a/packages/hoppscotch-agent/package.json
+++ b/packages/hoppscotch-agent/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hoppscotch-interceptor",
+  "name": "hoppscotch-agent",
   "private": true,
   "version": "0.1.0",
   "type": "module",
