--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -40,6 +40,8 @@
     "@hoppscotch/ui": "0.2.0",
     "@hoppscotch/vue-toasted": "0.1.0",
     "@lezer/highlight": "1.2.0",
+    "@noble/curves": "1.6.0",
+    "@scure/base": "1.1.9",
     "@unhead/vue": "1.8.8",
     "@urql/core": "4.2.0",
     "@urql/devtools": "2.0.3",
@@ -48,8 +50,8 @@
     "@vitejs/plugin-legacy": "4.1.1",
     "@vueuse/core": "10.7.0",
     "acorn-walk": "8.3.0",
-    "axios": "1.7.5",
     "aws4fetch": "1.0.19",
+    "axios": "1.7.5",
     "buffer": "6.0.3",
     "cookie-es": "1.0.0",
     "dioc": "3.0.2",
