--- a/packages/hoppscotch-agent/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-agent/src-tauri/Cargo.toml
@@ -32,7 +32,7 @@ rand = "0.8.5"
 log = "0.4.22"
 env_logger = "0.11.5"
 curl = { version = "0.4.46", features = ["ntlm", "static-curl", "static-ssl"] }
-openssl = "0.10.66"
+openssl = { version = "0.10.66", features = ["vendored"] }
 openssl-sys = "0.9.103"
 url-escape = "0.1.1"
 thiserror = "1.0.64"
