--- a/packages/hoppscotch-agent/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-agent/src-tauri/Cargo.toml
@@ -40,6 +40,8 @@ tauri-plugin-store = "2.0.0-rc.3"
 x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
 base16 = "0.2.1"
 aes-gcm = { version = "0.10.3", features = ["aes"] }
+tauri-plugin-updater = "2.0.0-rc.3"
+tauri-plugin-dialog = "2.0.0-rc.7"
 
 [dev-dependencies]
 mockito = "1.5.0"
