--- a/packages/hoppscotch-agent/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-agent/src-tauri/Cargo.toml
@@ -42,6 +42,7 @@ base16 = "0.2.1"
 aes-gcm = { version = "0.10.3", features = ["aes"] }
 tauri-plugin-updater = "2.0.0-rc.3"
 tauri-plugin-dialog = "2.0.0-rc.7"
+http = "1.1.0"
 
 [dev-dependencies]
 mockito = "1.5.0"
