--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -67,6 +67,7 @@
     "insomnia-importers": "3.6.0",
     "io-ts": "2.2.20",
     "js-yaml": "4.1.0",
+    "jsonc": "2.0.0",
     "jsonpath-plus": "7.2.0",
     "lodash-es": "4.17.21",
     "lossless-json": "3.0.2",
