--- a/packages/hoppscotch-backend/package.json
+++ b/packages/hoppscotch-backend/package.json
@@ -28,39 +28,39 @@
     "do-test": "pnpm run test"
   },
   "dependencies": {
-    "@apollo/server": "4.9.5",
-    "@nestjs-modules/mailer": "1.9.1",
-    "@nestjs/apollo": "12.0.9",
-    "@nestjs/common": "10.2.7",
-    "@nestjs/config": "3.1.1",
-    "@nestjs/core": "10.2.7",
+    "@apollo/server": "4.11.0",
+    "@nestjs-modules/mailer": "2.0.2",
+    "@nestjs/apollo": "12.2.0",
+    "@nestjs/common": "10.4.4",
+    "@nestjs/config": "3.2.3",
+    "@nestjs/core": "10.4.4",
     "@nestjs/graphql": "12.0.9",
-    "@nestjs/jwt": "10.1.1",
+    "@nestjs/jwt": "10.2.0",
     "@nestjs/passport": "10.0.3",
-    "@nestjs/platform-express": "10.2.7",
-    "@nestjs/schedule": "4.0.1",
-    "@nestjs/swagger": "7.4.0",
+    "@nestjs/platform-express": "10.4.4",
+    "@nestjs/schedule": "4.1.1",
+    "@nestjs/swagger": "7.4.2",
     "@nestjs/terminus": "10.2.3",
-    "@nestjs/throttler": "5.0.1",
-    "@prisma/client": "5.8.1",
+    "@nestjs/throttler": "6.2.1",
+    "@prisma/client": "5.20.0",
     "argon2": "0.41.1",
-    "bcrypt": "5.1.0",
+    "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "cookie": "1.0.0",
     "cookie-parser": "1.4.7",
-    "cron": "3.1.6",
-    "express": "4.20.0",
-    "express-session": "1.17.3",
-    "fp-ts": "2.13.1",
-    "graphql": "16.8.1",
-    "graphql-query-complexity": "0.12.0",
-    "graphql-redis-subscriptions": "2.6.0",
+    "cron": "3.1.7",
+    "express": "4.21.1",
+    "express-session": "1.18.1",
+    "fp-ts": "2.16.9",
+    "graphql": "16.9.0",
+    "graphql-query-complexity": "1.0.0",
+    "graphql-redis-subscriptions": "2.6.1",
     "graphql-subscriptions": "2.0.0",
-    "handlebars": "4.7.7",
-    "io-ts": "2.2.16",
-    "luxon": "3.2.1",
-    "nodemailer": "6.9.14",
+    "handlebars": "4.7.8",
+    "io-ts": "2.2.21",
+    "luxon": "3.5.0",
+    "nodemailer": "6.9.15",
     "passport": "0.7.0",
     "passport-github2": "0.1.12",
     "passport-google-oauth20": "2.0.0",
@@ -68,46 +68,46 @@
     "passport-local": "1.0.0",
     "passport-microsoft": "2.1.0",
     "posthog-node": "4.2.0",
-    "prisma": "5.8.1",
+    "prisma": "5.20.0",
     "reflect-metadata": "0.2.2",
-    "rimraf": "3.0.2",
-    "rxjs": "7.6.0"
+    "rimraf": "6.0.1",
+    "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "10.2.1",
-    "@nestjs/schematics": "10.0.3",
-    "@nestjs/testing": "10.2.7",
-    "@relmify/jest-fp-ts": "2.0.2",
-    "@types/bcrypt": "5.0.0",
+    "@nestjs/cli": "10.4.5",
+    "@nestjs/schematics": "10.1.4",
+    "@nestjs/testing": "10.4.4",
+    "@relmify/jest-fp-ts": "2.1.1",
+    "@types/bcrypt": "5.0.2",
     "@types/cookie": "0.6.0",
     "@types/cookie-parser": "1.4.7",
-    "@types/express": "4.17.14",
-    "@types/jest": "29.4.0",
-    "@types/luxon": "3.2.0",
-    "@types/node": "18.11.10",
-    "@types/nodemailer": "6.4.7",
+    "@types/express": "5.0.0",
+    "@types/jest": "29.5.13",
+    "@types/luxon": "3.4.2",
+    "@types/node": "22.7.5",
+    "@types/nodemailer": "6.4.16",
     "@types/passport-github2": "1.2.9",
     "@types/passport-google-oauth20": "2.0.16",
     "@types/passport-jwt": "4.0.1",
     "@types/passport-microsoft": "1.0.3",
-    "@types/supertest": "2.0.12",
-    "@typescript-eslint/eslint-plugin": "5.45.0",
-    "@typescript-eslint/parser": "5.45.0",
+    "@types/supertest": "6.0.2",
+    "@typescript-eslint/eslint-plugin": "8.8.1",
+    "@typescript-eslint/parser": "8.8.1",
     "cross-env": "7.0.3",
-    "eslint": "8.29.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "jest": "29.4.1",
-    "jest-mock-extended": "3.0.1",
+    "eslint": "9.12.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "jest": "29.7.0",
+    "jest-mock-extended": "4.0.0-beta1",
     "jwt": "link:@types/nestjs/jwt",
-    "prettier": "2.8.4",
+    "prettier": "3.3.3",
     "source-map-support": "0.5.21",
-    "supertest": "6.3.2",
-    "ts-jest": "29.0.5",
-    "ts-loader": "9.4.2",
-    "ts-node": "10.9.1",
-    "tsconfig-paths": "4.1.1",
-    "typescript": "4.9.3"
+    "supertest": "7.0.0",
+    "ts-jest": "29.2.5",
+    "ts-loader": "9.5.1",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
