revert: undo mjml changes on pnpm overrides

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "overrides": {
       "cookie": "0.7.2",
       "vue": "3.3.9",
+      "@nestjs-modules/mailer>mjml": "5.0.0-alpha.4",
       "subscriptions-transport-ws>ws": "7.5.10",
       "braces": "3.0.3",
       "send": "0.19.0",
